	* lib/rubygems/config_file.rb: Add ConfigFile#[]=, so --proxy
	command-line option works.  Fixes #8152 by Justin Sabelkko.
	* lib/rubygems/post-install.rb: Make sure we use the
	latest-and-greatest RubyGems when running post-install.rb.  Fixes Bug
	#8411 by Duy Nguyen.
	* lib/rubygems/remote_fetcher.rb: An empty HTTP_PROXY means no proxy.
	Fixes Bug #9042 by Michael Brodhead.

2007-07-25  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/indexer.rb: Create the index in /tmp, then move it into
	place when we're done.  This will prevent spurious bulk index updates
	from occurring while the quick index is missing.  Remove the option to
	not build the quick index.
	* lib/rubygems/commands/generate_index_command.rb: --no-quick is gone.
	* lib/rubygems/user_interaction.rb: If stdin is not a tty, it is
	unlikely that gem is going to get a response when asking a question.
	Patch #10660 by Paul Brannan.
	* lib/rubygems/validator.rb: Output test failures when using install
	-t.  Patch #10659 by Paul Brannan.
	* lib/rubygems/custom_require.rb (Kernel#require): Only rescue a
	LoadError that matches the file we are requiring.  Patch #10723 by
	Tyler Rick.
	* lib/rubygems/remote_fetcher.rb: Support HTTP basic authentication.
	Patch #8121 by Max Dunn.
	* lib/rubygems/commands/install_command.rb: Don't raise an error when
	a gem has no tests.  Patch #11824 by Katsuyuki MIYAMUKO.

2007-07-23  Eric Hodel  <drbrain@segment7.net>

	* lib/commands/contents_command.rb: Add --lib-only option, remove
	useless --list option.  Feature request #9498 by Martin DeMello.
	* lib/rubygems/specification.rb: Restrict to only files in
	#require_paths.  Add #required_rubygems_version.  Feature request
	#7780 by Eric Hodel.
	* lib/rubygems/commands/dependency_command.rb: Display dependencies for
	remote gems.  Feature request #12133 by Eric Hodel.  -r for reverse
	dependencies is now -R.
	* lib/rubygems/commands/specification_command.rb: Display